@@ -230,6 +230,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-2860: TestAvroStorageUtils.testGetConcretePathFromGlob fails on some version of hadoop (cheolsoo via jcoveney)
+
 PIG-2861: PlanHelper imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (jcoveney)
 
 PIG-2849: Errors in document Getting Started (miyakawataku via billgraham)
